--- a/ApiTest/templates/pyechartReport.html
+++ b/ApiTest/templates/pyechartReport.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="6e871840df654815b57a33dcfd5c1c55" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="3413c9d03d3046b48f1d61a40d03577d" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_6e871840df654815b57a33dcfd5c1c55 = echarts.init(
-            document.getElementById('6e871840df654815b57a33dcfd5c1c55'), 'white', {renderer: 'canvas'});
-        var option_6e871840df654815b57a33dcfd5c1c55 = {
+        var chart_3413c9d03d3046b48f1d61a40d03577d = echarts.init(
+            document.getElementById('3413c9d03d3046b48f1d61a40d03577d'), 'white', {renderer: 'canvas'});
+        var option_3413c9d03d3046b48f1d61a40d03577d = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -51,16 +51,12 @@
             "type": "bar",
             "name": "Duration",
             "data": [
-                49.702,
-                0.317,
-                1.337,
-                0.166,
-                0.043,
-                0.275,
-                0,
-                0,
-                0,
-                0.264
+                3.36,
+                0.309,
+                0.163,
+                0.869,
+                0.364,
+                0.284
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -125,16 +121,12 @@
                 }
             },
             "data": [
-                "get_unit_list",
-                "create_unit",
-                "update_unit",
-                "get_unit_by_id",
-                "delete_unit_by_group_name",
-                "create_data_form_config",
-                "delete_data_form_config",
-                "get_data_form_config_details",
-                "get_data_form_config_list",
-                "get_department_list"
+                "user_sso_login",
+                "get_user_permission_set",
+                "get_user_image_by_photo_url",
+                "get_info_by_user_id",
+                "get_tree_node_list_by_parent_id",
+                "get_object_list_in_department"
             ]
         }
     ],
@@ -251,7 +243,7 @@
         "zoomLock": false
     }
 };
-        chart_6e871840df654815b57a33dcfd5c1c55.setOption(option_6e871840df654815b57a33dcfd5c1c55);
+        chart_3413c9d03d3046b48f1d61a40d03577d.setOption(option_3413c9d03d3046b48f1d61a40d03577d);
     </script>
 </body>
 </html>
