--- a/ApiTest/templates/functionCase.html
+++ b/ApiTest/templates/functionCase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Testapi-单一接口测试</title>
+    <title>Testapi-功能测试</title>
 
     <link rel="icon" href="../static/images/favicon%202.ico">
 
@@ -115,104 +115,6 @@
         </div>
     </div>
 
-    <!--添加编辑用户信息-->
-    <div class="layui-row" id="add_update_role" style="display: none;">
-        <div class="layui-col-md11">
-            <form class="layui-form" lay-filter="add_update_role">
-
-                <div class="layui-form-item" style="margin-top: 20px;">
-                    <label class="layui-form-label">系统</label>
-                    <div class="layui-input-block">
-                        <input type="text" id="system" name="system" required lay-verify="required"
-                                autocomplete="off" class="layui-input" value="{{ system }}">
-                    </div>
-                </div>
-
-                <div class="layui-form-item">
-                    <label class="layui-form-label">角色</label>
-                    <div class="layui-input-block">
-                        <input type="text" id="role" name="role" required lay-verify="required"
-                               placeholder="请输入角色名" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-
-                <div class="layui-form-item">
-                    <label class="layui-form-label">账号</label>
-                    <div class="layui-input-block">
-                        <input type="text" id="username" name="username" required lay-verify="required"
-                               placeholder="请输入账号" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">密码</label>
-                    <div class="layui-input-block">
-                        <input type="text" id="password" name="password" required lay-verify="required"
-                               placeholder="请输入密码" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">令牌</label>
-                    <div class="layui-input-block">
-                        <input type="text" id="token" name="token"
-                               placeholder="请输入令牌,可以不填" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">IP</label>
-                    <div class="layui-input-block">
-                        <input type="text" id="url" name="url" required lay-verify="required"
-                               placeholder="请输入IP地址" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-
-                <div class="layui-form-item">
-                    <div class="layui-input-block">
-                        <button class="layui-btn layui-btn-warm" lay-submit lay-filter="add_update_role"
-                                style="float: right;margin-left:5px;">立即提交
-                        </button>
-                        <button type="reset" style="float: right;" class="layui-btn layui-btn-primary">重置</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <!--负责人-->
-    <div class="layui-row" id="head" style="display: none;">
-        <div class="layui-col-md11">
-            <form class="layui-form" lay-filter="head">
-                <div class="layui-form-item" style="margin-top: 25px;">
-                    <label class="layui-form-label">负责人:</label>
-                    <div class="layui-input-block">
-                        <select name="head" lay-verify="required">
-                            <option value="老张">老张</option>
-                            <option value="老王">老王</option>
-                            <option value="老李">老李</option>
-                            <option value="老江">老江</option>
-                            <option value="老刘">老刘</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">描述</label>
-                    <div class="layui-input-block">
-                        <textarea name="describe" placeholder="请输入内容" class="layui-textarea"></textarea>
-                    </div>
-                </div>
-                <div class="layui-form-item" style="margin-top: 45px;">
-                    <div class="layui-input-block">
-                        <button class="layui-btn" lay-submit lay-filter="update_apicase"
-                                style="float: right;background-color: cornflowerblue;">确定
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-
     <!--导入测试用例-->
     <div class="layui-row" id="importCase" style="display:none;">
         <div class="layui-col-md11">
@@ -233,113 +135,6 @@
         </div>
     </div>
 
-    <!--进度条-->
-    <div class="layui-row" id="jindutiao" style="display: none;">
-        <div class="layui-col-md11">
-            <div class="layui-progress layui-progress-big" lay-showpercent="true" lay-filter="demo">
-                <div class="layui-progress-bar" lay-percent="0%"></div>
-            </div>
-        </div>
-    </div>
-
-    <!--重复执行-->
-    <div class="layui-row" id="repeat_run" style="display: none;">
-        <div class="layui-col-md11">
-            <div class="layui-tab">
-                <ul class="layui-tab-title">
-                    <li class="layui-this">单线程执行</li>
-                    <li>多线程执行</li>
-                </ul>
-                <div class="layui-tab-content">
-                    <div class="layui-tab-item layui-show">
-                        <form class="layui-form" lay-filter="repeat">
-
-                            <div class="layui-form-item" style="margin-top: 30px;">
-                                <label class="layui-form-label">执行次数</label>
-                                <div class="layui-input-block">
-                                    <input type="text" name="runtime" required lay-verify="required"
-                                           placeholder="请输入执行次数"
-                                           autocomplete="off" class="layui-input">
-                                </div>
-                            </div>
-
-
-                            <div class="layui-form-item" style="margin-top: 30px;">
-                                <div class="layui-input-block">
-                                    <button class="layui-btn" lay-submit lay-filter="repeat"
-                                            style="float: right;background-color: cornflowerblue;">立即提交
-                                    </button>
-                                    <button type="reset" class="layui-btn layui-btn-primary"
-                                            style="float: right;margin-right: 10px;">重置
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="layui-tab-item">
-                        <form class="layui-form" lay-filter="repeat">
-
-                            <div class="layui-form-item" style="margin-top: 30px;">
-                                <label class="layui-form-label">执行次数</label>
-                                <div class="layui-input-block">
-                                    <input type="text" name="runtime" required lay-verify="required"
-                                           placeholder="请输入执行次数"
-                                           autocomplete="off" class="layui-input">
-                                </div>
-                            </div>
-                            <div class="layui-form-item">
-                                <label class="layui-form-label">线程数</label>
-                                <div class="layui-input-block">
-                                    <input type="text" name="concurrency" required lay-verify="required"
-                                           placeholder="请输入线程数"
-                                           autocomplete="off" class="layui-input">
-                                </div>
-                            </div>
-
-                            <div class="layui-form-item" style="margin-top: 30px;">
-                                <div class="layui-input-block">
-                                    <button class="layui-btn" lay-submit lay-filter="repeat"
-                                            style="float: right;background-color: cornflowerblue;">立即提交
-                                    </button>
-                                    <button type="reset" class="layui-btn layui-btn-primary"
-                                            style="float: right;margin-right: 10px;">重置
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--性能测试-->
-    <div class="layui-row" id="locust" style="display: none;">
-        <div class="layui-col-md11">
-
-            <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 20px;">
-                <a href="http://localhost:8089/" target="_blank" style="font-size: 20px;color: #1E9FFF;padding-left: 20px;">
-                    点击前往-->Start new Locust swarm
-                </a>
-            </blockquote>
-            <!--a标签跳转到话加上target="_blank"-->
-            <blockquote class="layui-elem-quote" style="margin-top: 20px;padding-left: 20px;">
-                注意:如果测试结束，请回到此页面关闭8089端口进程
-            </blockquote>
-
-            <form class="layui-form" lay-filter="locust">
-
-                <div class="layui-form-item" style="margin-top: 20px;">
-                    <div class="layui-input-block">
-                        <button class="layui-btn" lay-submit lay-filter="locust"
-                                style="float: right;background-color: cornflowerblue;">关闭8089端口
-                        </button>
-                    </div>
-                </div>
-
-            </form>
-        </div>
-    </div>
 
     <!--添加编辑子表case-->
     <div class="layui-row" id="add_update_parameter" style="display: none;">
@@ -825,51 +620,10 @@
                         }
 
                     ]
-                }// filter: true
-                , {
-                    field: 'url', title: '请求路径', width: 220, align: "left", templet: function (res) {
-                        console.log(res.url);
-                        var a = res.url.split("/");
-                        return '<span>' + a[a.length - 1] + '</span>'
-                    }
                 }
-                , {field: 'method', title: '请求方式', width: 90, align: "left", templet: "#methodTpl"}
+                , {field: 'method', title: '请求方式', width: 90, align: "left"}
                 , {field: 'params', title: 'Query参数', align: "left", event: 'params'}
                 , {field: 'body', title: 'Body参数', event: 'body', align: "left"}
-                , {
-                    field: 'durantion',
-                    title: '响应时长',
-                    align: "left",
-                    sort: true,
-                    width: 100,
-                    event: "durantion",
-                    templet: function (res) {
-                        if (res.duration < 1) {
-                            let a = String(res.duration * 1000) + "毫秒";
-                            return '<span>' + a + '</span>'
-                        } else if (res.duration >= 1 && res.duration < 3) {
-                            let b = String(res.duration) + "秒";
-                            return '<span style="color: cornflowerblue;">' + b + '</span>'
-                        } else {
-                            let b = String(res.duration) + "秒";
-                            return '<span style="color: deeppink;">' + b + '</span>'
-                        }
-                    }
-                }
-                , {
-                    field: 'result', title: '响应结果', align: "left", event: "detail", templet: function (res) {
-                        if (res.result == null || res.result == "") {
-                            return '<span>' + res.result + '</span>'
-                        } else if (res.result.indexOf("message") != -1 && res.result.indexOf("error") != -1) {
-                            let b = JSON.parse(res.result);
-                            //console.log(JSON.stringify(b["message"]));
-                            return '<span style="color: red;">' + JSON.stringify(b["message"]) + '</span>'
-                        } else {
-                            //console.log(util.escape(res.result));
-                            return '<span>' + util.escape(res.result[:100]) + '</span>'
-                        }
-                    }
-                }
                 , {field: 'head', title: '负责人', width: 80, align: "left", event: "head"}//merge: true行合并
 
             ]]
