--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -866,7 +866,7 @@
                             return '<span style="color: red;">' + JSON.stringify(b["message"]) + '</span>'
                         } else {
                             //console.log(util.escape(res.result));
-                            return '<span>' + util.escape(res.result[:100]) + '</span>'
+                            return '<span>' + util.escape(res.result) + '</span>'
                         }
                     }
                 }
