--- a/ApiTest/templates/pyechartReport.html
+++ b/ApiTest/templates/pyechartReport.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="d1a6632acd114486af1db311e782686a" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="e97756894f444aa1a75fbd95e31cc9bb" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_d1a6632acd114486af1db311e782686a = echarts.init(
-            document.getElementById('d1a6632acd114486af1db311e782686a'), 'white', {renderer: 'canvas'});
-        var option_d1a6632acd114486af1db311e782686a = {
+        var chart_e97756894f444aa1a75fbd95e31cc9bb = echarts.init(
+            document.getElementById('e97756894f444aa1a75fbd95e31cc9bb'), 'white', {renderer: 'canvas'});
+        var option_e97756894f444aa1a75fbd95e31cc9bb = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -51,12 +51,11 @@
             "type": "bar",
             "name": "Duration",
             "data": [
-                3.36,
-                0.309,
-                0.163,
-                0.869,
-                0.364,
-                0.284
+                0.496,
+                1.337,
+                0.317,
+                0.166,
+                0.043
             ],
             "barCategoryGap": "20%",
             "label": {
@@ -121,12 +120,11 @@
                 }
             },
             "data": [
-                "user_sso_login",
-                "get_user_permission_set",
-                "get_user_image_by_photo_url",
-                "get_info_by_user_id",
-                "get_tree_node_list_by_parent_id",
-                "get_object_list_in_department"
+                "get_unit_list",
+                "update_unit",
+                "create_unit",
+                "get_unit_by_id",
+                "delete_unit_by_group_name"
             ]
         }
     ],
@@ -243,7 +241,7 @@
         "zoomLock": false
     }
 };
-        chart_d1a6632acd114486af1db311e782686a.setOption(option_d1a6632acd114486af1db311e782686a);
+        chart_e97756894f444aa1a75fbd95e31cc9bb.setOption(option_e97756894f444aa1a75fbd95e31cc9bb);
     </script>
 </body>
 </html>
