--- a/ApiTest/templates/index.html
+++ b/ApiTest/templates/index.html
@@ -42,7 +42,7 @@
                 {#					</li>#}
                 <li class="layui-nav-item" data-menu="automation" pc>
                     <a style="color: #0C0C0C!important;" href="javascript:;"><i class="layui-icon"
-                                              data-icon="&#xe658;">&#xe658;</i><cite>UI自动化测试</cite></a>
+                                              data-icon="&#xe658;">&#xe658;</i><cite>功能测试</cite></a>
                 </li>
             </ul>
             <!-- 顶部右侧菜单 -->
