--- a/ApiTest/static/css/singleApi.css
+++ b/ApiTest/static/css/singleApi.css
@@ -107,12 +107,13 @@
 .layui-body{
     left:0px;
 }
-.layui-nav-itemed > .layui-nav-child{
-    max-height:300px;
-    overflow-y: scroll;
-}
 
 .mybg{
     /*display: flex;*/
     background-image:linear-gradient(to left bottom, hsl(79, 100%, 85%) 0%,hsl(220, 100%, 85%) 100%);
+}
+.layui-nav-itemed > .layui-nav-child{
+    background-color: inherit !important;
+    height:400px;
+    overflow: overlay;
 }
