--- a/ApiTest/templates/functionCase.html
+++ b/ApiTest/templates/functionCase.html
@@ -28,67 +28,66 @@
                     <label class="layui-form-label">所属模块</label>
                     <div class="layui-input-block">
                         <select name="belong" id="belong" lay-verify="required">
-                            {#                            django render#}
-                            {#                            {% for i in apinav %}#}
-                            {#                                <option value="{{ i }}">{{ i }}</option>#}
-                            {#                            {% endfor %}#}
                             <option value=""></option>
                         </select>
                     </div>
                 </div>
 
                 <div class="layui-form-item">
-                    <label class="layui-form-label">请求方式</label>
+                    <label class="layui-form-label">功能模块</label>
                     <div class="layui-input-block">
-                        <input type="radio" name="method" value="get" title="GET" checked>
-                        <input type="radio" name="method" value="post" title="POST">
-                        <input type="radio" name="method" value="put" title="PUT">
-                        <input type="radio" name="method" value="delete" title="DELETE">
-                        <input type="radio" name="method" value="file" title="FILE">
+                        <input type="text" name="function_model" required lay-verify="required" placeholder=""
+                               autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">用例点</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="function_point" required lay-verify="required" placeholder=""
+                               autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
                 <div class="layui-form-item">
                     <label class="layui-form-label">用例名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="casename" required lay-verify="required" placeholder="请输入用例名称"
+                        <input type="text" name="casename" required lay-verify="required" placeholder=""
                                autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
+
                 <div class="layui-form-item">
-                    <label class="layui-form-label">请求地址</label>
+                    <label class="layui-form-label">前提条件</label>
                     <div class="layui-input-block">
-                        <input type="text" name="url" required lay-verify="required" placeholder="请输入用例名称"
+                        <textarea name="premise_condition" placeholder="" class="layui-textarea" required lay-verify="required"></textarea>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">执行结果</label>
+                    <div class="layui-input-block">
+                        <textarea name="execution_result" placeholder="" class="layui-textarea" required lay-verify="required"></textarea>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">备注</label>
+                    <div class="layui-input-block">
+                        <textarea name="note" placeholder="" class="layui-textarea" required lay-verify="required"></textarea>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <label class="layui-form-label">执行人</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="executor" required lay-verify="required" placeholder=""
                                autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">Query Params</label>
-                    <div class="layui-input-block">
-                        <textarea name="params" placeholder="请输入内容" class="layui-textarea"></textarea>
-                    </div>
-                </div>
 
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">Form Data</label>
-                    <div class="layui-input-block">
-                        <textarea name="body" placeholder="请输入内容" class="layui-textarea"></textarea>
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">负责人</label>
-                    <div class="layui-input-block">
-                        <select name="head" lay-verify="required">
-                            <option value="老张">老张</option>
-                            <option value="老王">老王</option>
-                            <option value="老李">老李</option>
-                            <option value="老江">老江</option>
-                            <option value="老刘">老刘</option>
-                        </select>
-                    </div>
-                </div>
                 <div class="layui-form-item">
                     <div class="layui-input-block">
                         <button class="layui-btn" lay-submit lay-filter="add_update_case"
@@ -359,7 +358,7 @@
                                 // 单击行事件
                                 // obj 子表当前行对象
                                 // pobj 父表当前行对象
-                                obj.tr.css({'background': '#5FB878'}).siblings().removeAttr('style')
+                                obj.tr.css({'background': '#ECEFFC'}).siblings().removeAttr('style')
                                 console.log(obj.tr); //得到当前行元素对象
                                 console.log(obj.data); //得到当前行数据
                                 console.log(pobj); //得到当前行数据
@@ -580,7 +579,7 @@
             }
             , id: 'testReload'
             , rowEvent: function (obj) {
-                obj.tr.css({'background': '#5FB878', 'color': 'white'}).siblings().removeAttr('style')
+                obj.tr.css({'background': '#ECEFFC'}).siblings().removeAttr('style')
             }
             , done: function (res) {   //返回数据执行回调函数
                 layer.close(index);    //返回数据关闭loading
@@ -736,45 +735,6 @@
                         content: $("#importCase").html()
                     });
                     break;
-                //批量删除用例
-                case "batch_delete":
-                    var data = checkStatus.data;
-                    layer.confirm('真的删除行么', function (index) {
-                        console.log(data);
-                        layer.close(index);
-                        var l = [];
-                        for (i = 0; i < data.length; i++) {
-                            l.push(data[i]["caseid"]);
-                        }
-                        console.log(l);
-                        $.ajax({
-                            cache: false,
-                            url: "/api/v1/singleapi/del_case/0/",
-                            type: 'DELETE',
-                            data: {
-                                "ids": JSON.stringify(l),
-                            },
-                            success: function (data) {
-                                if (data.code === 1000) {
-                                    layer.msg(data.msg, {
-                                        icon: 6, offset: "t"
-                                    })
-                                } else {
-                                    layer.msg(data.error, {
-                                        icon: 5, offset: "t"
-                                    })
-                                }
-                                $(".layui-laypage-btn").click();
-                            },
-                            error: function (data) {
-                                layer.msg("回调失败", {
-                                    icon: 5,
-                                    offset: 't'
-                                });
-                            },
-                        });
-                    });
-                    break;
             }
 
         });
@@ -821,11 +781,11 @@
                     obj.del();//删除对应行（tr）的DOM结构，并更新缓存
                     layer.close(index);
                     //向服务端发送删除指令
-                    var id = obj.data["caseid"];
+                    var id = obj.data["id"];
                     console.log(id);
                     $.ajax({
                         cache: false,
-                        url: "/api/v1/singleapi/del_case/" + id + "/",
+                        url: "/api/v1/functioncase/del_case/" + id + "/",
                         type: 'DELETE',
                         success: function (data) {
                             if (data.code === 1000) {
@@ -852,8 +812,6 @@
             else if (obj.event === 'update_case') {
                 //获取系统模块参数
                 get_belong_by_system();
-                //获取系统角色
-                get_role_by_system("option", "identity");
                 var a = layer.open({
                     type: 1,
                     title: "编辑用例",
@@ -865,35 +823,34 @@
                         layui.use(['form', 'jquery'], function () {
                             var form = layui.form;
                             $ = layui.$;
-                            var caseid = data.caseid;
+                            var caseid = data.id;
                             form.val("add_update_case", {
-                                "casename": data.casename,
-                                "identity": data.identity,
-                                "url": data.url,
-                                "method": data.method,
                                 "belong": data.belong,
-                                "params": data.params,
-                                "body": data.body,
-                                "head": data.head
+                                "function_model": data.function_model,
+                                "function_point": data.function_point,
+                                "casename": data.casename,
+                                "premise_condition": data.premise_condition,
+                                "execution_result": data.execution_result,
+                                "note": data.note,
+                                "executor": data.executor,
                             });
                             //监听编辑用户信息，
                             form.on('submit(add_update_case)', function (data) {
                                 console.log(data.field);
                                 $.ajax({
                                     cache: false,
-                                    url: "/api/v1/singleapi/update_case/" + String(caseid) + "/",
+                                    url: "/api/v1/functioncase/update_case/" + String(caseid) + "/",
                                     type: 'PUT',
                                     data: {
                                         "belong": data.field.belong,
-                                        "body": data.field.body,
-                                        //"caseID": data.field.caseID,
+                                        "function_model": data.field.function_model,
+                                        "function_point": data.field.function_point,
                                         "casename": data.field.casename,
-                                        "identity": data.field.identity,
-                                        "method": data.field.method,
-                                        "params": data.field.params,
-                                        "system": '{{ system }}',
-                                        "url": data.field.url,
-                                        "head": data.field.head
+                                        "premise_condition": data.field.premise_condition,
+                                        "execution_result": data.field.execution_result,
+                                        "note": data.field.note,
+                                        "executor": data.field.executor,
+                                        "system":"{{ system }}"
                                     },
                                     beforeSend: function () {
                                         l_index = layer.load(0, {shade: [0.5, '#DBDBDB']});
@@ -937,6 +894,7 @@
 <script>
     //新建用例
     function add_case() {
+        get_belong_by_system();
         var Create_apicase = layer.open({
             //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
             type: 1,
@@ -954,18 +912,18 @@
                     form.on('submit(add_update_case)', function (data) {
                         $.ajax({
                             cache: false,
-                            url: "/api/v1/singleapi/add_case/",
+                            url: "/api/v1/functioncase/add_case/",
                             type: 'POST',
                             data: {
                                 "belong": data.field.belong,
-                                "body": data.field.body,
+                                "function_model": data.field.function_model,
+                                "function_point": data.field.function_point,
                                 "casename": data.field.casename,
-                                "identity": data.field.identity,
-                                "method": data.field.method,
-                                "params": data.field.params,
-                                "system": '{{ system }}',
-                                "url": data.field.url,
-                                "head": data.field.head
+                                "premise_condition": data.field.premise_condition,
+                                "execution_result": data.field.execution_result,
+                                "note": data.field.note,
+                                "executor": data.field.executor,
+                                "system":"{{ system }}"
                             },
                             beforeSend: function () {
                                 l_index = layer.load(0, {shade: [0.5, '#DBDBDB']});
@@ -999,6 +957,36 @@
                 });
             }
         });
+    }
+
+    function get_belong_by_system() {
+        $.ajax({
+                url: "/api/v1/menu/get_belong_by_system/",
+                type: 'GET',
+                async: false,
+                data: {
+                    "system": '{{ system }}',
+                    "area": "automation"
+                },
+                success: function (data) {
+                    //res = data;
+                    var str = '';
+                    //data是数组时，index是当前元素的位置，value是值
+                    $.each(data, function (index, value) {
+                        str += "<option value='" + value + "'>" + value + "</option>";
+                    });
+                    console.log(str);
+                    $('#belong').empty();
+                    $('#belong').append(str);
+
+                },
+                error: function () {
+                    layer.msg("回调失败", {
+                        icon: 5,
+                        offset: 't'
+                    });
+                },
+            });
     }
 
 </script>
