--- a/ApiTest/templates/index.html
+++ b/ApiTest/templates/index.html
@@ -88,7 +88,7 @@
             <ul class="layui-nav layui-nav-tree">
                 <li class="layui-nav-item layui-this">
                     <a href="javascript:;" data-url="/web_welcome/">
-                        <i class="layui-icon" data-icon="" style="color: #FFF!important;"></i><cite style="color: #FFF!important;">后台首页</cite></a>
+                        <i class="layui-icon" data-icon="" style="color: #FFF!important;"></i><cite style="color: #FFF!important;">首页</cite></a>
                 </li>
             </ul>
         </div>
@@ -97,7 +97,7 @@
     <div class="layui-body layui-form">
         <div class="layui-tab mag0" lay-filter="bodyTab" id="top_tabs_box">
             <ul class="layui-tab-title top_tab" id="top_tabs">
-                <li class="layui-this" lay-id=""><i class="layui-icon">&#xe68e;</i> <cite>后台首页</cite></li>
+                <li class="layui-this" lay-id=""><i class="layui-icon">&#xe68e;</i> <cite>首页</cite></li>
             </ul>
             <ul class="layui-nav closeBox">
                 <li class="layui-nav-item">
