--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -50,6 +50,15 @@
                 </div>
 
                 <div class="layui-form-item">
+                    <label class="layui-form-label">负责人</label>
+                    <div class="layui-input-block">
+                        <select name="head" id="head" lay-verify="required">
+                            <option value=""></option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
                     <label class="layui-form-label">用例名称</label>
                     <div class="layui-input-block">
                         <input type="text" name="casename" required lay-verify="required"
@@ -130,18 +139,7 @@
                         <input type="text" name="replacekey" placeholder="无依赖不必填" class="layui-input">
                     </div>
                 </div>
-                <div class="layui-form-item mydepend" style="display: none;">
-                    <label class="layui-form-label">负责人</label>
-                    <div class="layui-input-block">
-                        <select name="head" lay-verify="required">
-                            <option value="老张">老张</option>
-                            <option value="老王">老王</option>
-                            <option value="老李">老李</option>
-                            <option value="老江">老江</option>
-                            <option value="老刘">老刘</option>
-                        </select>
-                    </div>
-                </div>
+
                 <div class="layui-form-item">
                     <div class="layui-input-block">
                         <button class="layui-btn" lay-submit lay-filter="add_update_case"
@@ -216,39 +214,6 @@
                                 style="float: right;margin-left:5px;">立即提交
                         </button>
                         <button type="reset" style="float: right;" class="layui-btn layui-btn-primary">重置</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <!--负责人-->
-    <div class="layui-row" id="head" >
-        <div class="layui-col-md11">
-            <form class="layui-form" lay-filter="head">
-                <div class="layui-form-item" style="margin-top: 25px;">
-                    <label class="layui-form-label">负责人:</label>
-                    <div class="layui-input-block">
-                        <select name="head" lay-verify="required">
-                            <option value="老张">老张</option>
-                            <option value="老王">老王</option>
-                            <option value="老李">老李</option>
-                            <option value="老江">老江</option>
-                            <option value="老刘">老刘</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">描述</label>
-                    <div class="layui-input-block">
-                        <textarea name="describe" placeholder="请输入内容" class="layui-textarea"></textarea>
-                    </div>
-                </div>
-                <div class="layui-form-item" style="margin-top: 45px;">
-                    <div class="layui-input-block">
-                        <button class="layui-btn" lay-submit lay-filter="head"
-                                style="float: right;background-color: cornflowerblue;">确定
-                        </button>
                     </div>
                 </div>
             </form>
@@ -1737,6 +1702,7 @@
             else if (obj.event === 'update_case') {
                 get_role_by_system("option", "identity");
                 get_belong_by_system("belong");
+                get_head("head");
                 var a = layer.open({
                     type: 1,
                     title: "编辑用例",
@@ -1853,73 +1819,45 @@
                 });
 
             }
-            //编辑负责人
-            else if (obj.event === 'head') {
-                var update_head = layer.open({
-                    type: 1
-                    , value: data.head
-                    , title: ["编辑负责人"]
-                    , skin: "layui-layer-lan"
-                    , shade: 0.6
-                    , shadeClose: true
-                    , moveOut: true
-                    , area: ["30%", '40%'] //自定义文本域宽高
-                    , content: $("#head").html(),
-                    success: function () {
-                        layui.use('form', function () {
-                            var form = layui.form;
-                            form.val("head", {
-                                //我是对了对抗重置按钮来的
-                            });
-                            //监听编辑用户信息，
-                            form.on('submit(head)', function (data) {
-                                $.ajax({
-                                    cache: false,
-                                    url: "/api/v1/processapi/update_case/" + id + '/',
-                                    type: 'GET',
-                                    data: {
-                                        "head": data.field.head
-                                    },
-                                    success: function (data) {
-                                        if (data.code === 1000) {
-                                            layer.msg(data.msg, {
-                                                icon: 6, offset: "t"
-                                            })
-                                        } else {
-                                            layer.msg(data.error, {
-                                                icon: 5, offset: "t"
-                                            })
-                                        }
-                                        $(".layui-laypage-btn").click();
-                                    },
-                                    error: function () {
-                                        layer.msg("回调失败", {
-                                            icon: 5,
-                                            offset: 't'
-                                        });
-                                    },
-                                    complete: function () {
-                                        layer.close(update_head);
-                                    }
-
-                                });
-                                return false;//阻止表单跳转
-                            });
-                        })
-                    }
-
-                });
-
-            }
         });
     });
 
 </script>
 <script>
+
+    //获取责任者
+    function get_head(id) {
+        $.ajax({
+            url: "/api/v1/publicapi/get_head/",
+            type: 'GET',
+            async: false,
+            success: function (data) {
+                var str = '';
+                //data是数组时，index是当前元素的位置，value是值
+                $.each(data, function (index, value) {
+                    str += "<option value='" + value + "'>" + value + "</option>";
+                });
+                console.log(str);
+                $('#'+id).empty();
+                $('#'+id).append(str);
+
+            },
+            error: function () {
+                layer.msg("回调失败", {
+                    icon: 5,
+                    offset: 't'
+                });
+            },
+        });
+        //console.log(res);
+        //return res
+    }
+
     //新建用例
     function add_case() {
         get_role_by_system("option", "identity");
         get_belong_by_system("belong");
+        get_head("head");
         var Create_apicase = layer.open({
             //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
             type: 1,
